--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 # *.ps
 # *.eps
 # *.pdf
+doc/fig/*.pdf
+doc/fig/auto
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
