travis: Add ghostscript

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
       - texlive-latex-extra
       - texlive-pictures
       - texlive-font-utils
+      - ghostscript
       - latex-xcolor
       - python-pygments
       - pgf
