travis: Add texlive-publishers for IEEEtranN.bst

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
       - texlive-lang-german
       - texlive-latex-extra
       - texlive-pictures
+      - texlive-publishers
       - texlive-font-utils
       - ghostscript
       - latex-xcolor
