--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ addons:
 
 script:
   - cd doc
-  - latexmk -latexoption=-shell-escape -pdf main.tex
+  - latexmk -latex=lualatex -latexoption=-shell-escape -pdf main.tex
