--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
       - texlive-pictures
       - texlive-publishers
       - texlive-font-utils
+      - texlive-luatex
       - ghostscript
       - latex-xcolor
       - python-pygments
