--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: generic
 group: edge
 addons:
   apt:
+    sources:
+      - sourceline: "deb http://us.archive.ubuntu.com/ubuntu/ xenial main universe"
     packages:
       - texlive
       - texlive-fonts-extra
