--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ group: edge
 addons:
   apt:
     sources:
-      - sourceline: "deb http://us.archive.ubuntu.com/ubuntu/ xenial main universe"
+      - sourceline: "deb http://us.archive.ubuntu.com/ubuntu/ bionic main universe"
     packages:
       - texlive
       - texlive-fonts-extra
