--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
       - texlive-lang-german
       - texlive-latex-recommended
       - texlive-latex-extra
+      - texlive-plain-generic
       - texlive-bibtex-extra
       - biber
       - texlive-pictures
